@@ -1,4 +1,4 @@
-/*	$OpenBSD: uuencode.c,v 1.12 2001/03/01 02:27:18 deraadt Exp $	*/
+/*	$OpenBSD: uuencode.c,v 1.13 2002/02/24 18:31:09 markus Exp $	*/
 
 /*
  * Copyright (c) 2000 Markus Friedl.  All rights reserved.
@@ -28,7 +28,7 @@
 #include "xmalloc.h"
 #include "uuencode.h"
 
-RCSID("$OpenBSD: uuencode.c,v 1.12 2001/03/01 02:27:18 deraadt Exp $");
+RCSID("$OpenBSD: uuencode.c,v 1.13 2002/02/24 18:31:09 markus Exp $");
 
 int
 uuencode(u_char *src, u_int srclength,
@@ -50,7 +50,7 @@ uudecode(const char *src, u_char *target, size_t targsize)
 		;
 	for (; *p != '\0' && *p != ' ' && *p != '\t'; p++)
 		;
-	/* and remote trailing whitespace because __b64_pton needs this */
+	/* and remove trailing whitespace because __b64_pton needs this */
 	*p = '\0';
 	len = __b64_pton(encoded, target, targsize);
 	xfree(encoded);
